--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                      </label>
                      
 
-                     <label for="email">Email
+                     <label for="email">Email Address
                         <input type="email" id="email" name="email" required>
                      </label>
                      
