--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <div class="logo-section">
                  <img class="odin-img"src="img/odin-lined.png">
                  <h1>ODIN</h1>
-            </div>         
+            </div>
+            <p>Image from Guilty Gear Strive</p>       
          </div>
          
          <div class="form-section">
